# Traitement_Image

./: .gitignore  CMakeLists.txt  notes.txt
src/: CMakeLists.txt
src/tp/: CMakeLists.txt  kmeans.cpp  meanshift.cpp
src/tutorials/: CMakeLists.txt  load_modify_image.cpp
